[workspace]
members = [
    "client-sdk",
    "broker-server",
    "common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pavan Konduri <pavkon@duck.com>"]
description = "Kafka-inspired message broker in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StBlackwood/cartel"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
