[workspace]
members = [
    "client-sdk",
    "broker-server",
    "common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pavan Konduri <pavkon@duck.com>"]
description = "Kafka-inspired message broker in Rust"
license = "MIT"
repository = "https://github.com/StBlackwood/cartel"
rust-version = "1.82.0"
publish = false

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
