[package]
name = "broker_server"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "broker-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = "0.1"
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
client-sdk = { path = "../client-sdk" }
bincode = {workspace = true}
common = { path = "../common" }
